agregando contenido a las secciones

--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/3cd6bd8f4f.js" crossorigin="anonymous"></script>
     <title>Andres Proyect</title>
 </head>
 
@@ -17,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html"><img src="./images/image.png" width="60x60" alt=""></a>
+                <a class="navbar-brand" href="/index.html"><img src="./images/logospot.png" width="120x100" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -29,7 +30,7 @@
                             <a class="nav-link" href="/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/sobreMi.html">Sobre Andy</a>
+                            <a class="nav-link" href="/sobreMi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/blog.html">Blog</a>
@@ -69,7 +70,7 @@
     </section>
     <footer id="Footer" class="container-fluid justify-content-center">
         <div class="row marginAuto">
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Asesoramiento Personal</a>
@@ -80,14 +81,14 @@
                             Profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Blog</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Noticias de Actualidad</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Charlas a Empresas</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Sobre Andy</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mi experiencia laboral</a></li>
@@ -95,17 +96,14 @@
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis objetivos profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li><a class="link-dark" href="#"><img class="imagenesRRSS" src="./images/twitter_logo.png"
-                                    alt=""></a></li>
-                        <li class="ms-3"><a class="link-dark" href="#"><img class="imagenesRRSS"
-                                    src="./images/instagram_logo.png" alt=""></a></li>
-                        <li class="ms-3"><a class="link-dark" href="#"><img class="imagenesRRSS"
-                                    src="./images/facebook_logo.png" alt=""></a></li>
+                        <li ><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li class="ms-3"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li class="ms-3"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
                     </ul>
                 </ul>
             </div>
