--- a/servicios.html
+++ b/servicios.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/3cd6bd8f4f.js" crossorigin="anonymous"></script>
     <title>Andres Proyect</title>
 </head>
 
@@ -17,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html"><img src="./images/image.png" width="60x60" alt=""></a>
+                <a class="navbar-brand" href="/index.html"><img src="./images/logospot.png" width="120x100" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -29,7 +28,7 @@
                             <a class="nav-link" href="/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/sobreMi.html">Sobre Andy</a>
+                            <a class="nav-link" href="/sobreMi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/blog.html">Blog</a>
@@ -48,10 +47,10 @@
     <section class="container-fluid marginSection">
         <div class="row">
             <h1 class="tituloSeccion">¿En qué puedo ayudarte?</h1>
-            <div class="col-xxl-5 col-md-12 col-xs-12 marginAutoLR">
+            <div class="col-xxl-5 col-md-6 col-xs-12 marginAutoLR">
                 <div class="card">
                     <h3 class="card-title tituloServicios">Asesoramiento profesional</h3>
-                    <img src="/images/image.png" class="img-fluid rounded imagenServicios" alt="...">
+                    <img src="/images/servicio1.jpg" class="img-fluid rounded imagenServicios" alt="...">
                     <div class="card-body">
                         <div class="btnServicios">
                             <a href="#" class="btn btn-dark">Solicitá tu asesoramiento</a>
@@ -74,10 +73,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xxl-5 col-md-12 col-xs-12 marginAutoLR">
+            <div class="col-xxl-5 col-md-6 col-xs-12 marginAutoLR">
                 <div class="card">
                     <h3 class="card-title tituloServicios">Capacitaciones para empresas y emprendimientos</h3>
-                    <img src="/images/image.png" class="img-fluid rounded imagenServicios" alt="...">
+                    <img src="/images/servicio2.jpg" class="img-fluid rounded imagenServicios" alt="...">
                     <div class="card-body">
                         <div class="btnServicios">
                             <a href="#" class="btn btn-dark">Solicitá tu asesoramiento</a>
@@ -104,7 +103,7 @@
     </section>
     <footer id="Footer" class="container-fluid justify-content-center">
         <div class="row marginAuto">
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Asesoramiento Personal</a>
@@ -115,14 +114,14 @@
                             Profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Blog</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Noticias de Actualidad</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Charlas a Empresas</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Sobre Andy</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mi experiencia laboral</a></li>
@@ -130,17 +129,14 @@
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis objetivos profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li><a class="link-dark" href="#"><img class="imagenesRRSS" src="./images/twitter_logo.png"
-                                    alt=""></a></li>
-                        <li class="ms-3"><a class="link-dark" href="#"><img class="imagenesRRSS"
-                                    src="./images/instagram_logo.png" alt=""></a></li>
-                        <li class="ms-3"><a class="link-dark" href="#"><img class="imagenesRRSS"
-                                    src="./images/facebook_logo.png" alt=""></a></li>
+                        <li ><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li class="ms-3"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li class="ms-3"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
                     </ul>
                 </ul>
             </div>
@@ -153,5 +149,4 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
