--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/3cd6bd8f4f.js" crossorigin="anonymous"></script>
     <title>Andres Proyect</title>
 </head>
 
@@ -17,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./images/image.png" width="60x60" alt=""></a>
+                <a class="navbar-brand" href="#"><img src="./images/logospot.png" width="120x100" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -29,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobreMi.html">Sobre Andy</a>
+                            <a class="nav-link" href="sobreMi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/blog.html">Blog</a>
@@ -48,15 +47,18 @@
     <section class="container-fluid marginSection">
         <div class="row card cardMargin">
             <div class="row g-0">
-                <div class="col-xxl-4 col-md-5 col-sm-12">
-                    <img src="./images/image.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-xxl-8 col-md-7 col-sm-12">
+                <div class="col-xxl-10 col-md-7 col-sm-12">
                     <div class="card-body">
-                        <h5 class="card-title">Andy Rojas</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Bienvenidos a Sweet Spot!</h5>
+                        <p class="card-text">¡Hola! Después de un tiempo planteándome la posibilidad de crear un blog, por fin me anime y acá estamos.
+                            El objetivo fundamental del blog, como su nombre lo indica #SweetSpot (punto justo), es ser la interfaz donde se concreten y conecten diversos intereses de la sociedad abordados por diferentes puntos de vista. Es decir, con una visión “lo más plural posible”, intentando llegar a un consenso, o por lo menos, a un debate de diferentes actores de la sociedad sobre diferentes temas.
+                            Debido al eficiente trabajo del #laprogramacionselectiva, cada vez más leemos, escuchamos posiciones (generalmente parecidas a la nuestra) y estamos actualizados de los temas de nuestro interés. Solo los de nuestro interés, obviando otras miradas y perdiéndonos de hechos o debates interesantes e importantes que pasan bajo nuestro radar. 
+                            Generalmente, no se busca comprender un acontecimiento.  Si no, reforzar nuestras creencias previamente concebidas. En este blog trataremos de salir de la zona de confort, interiorizarnos acerca de cuales son los puntos de vista y propuestas de los demás actores de la sociedad. Intentaremos llegar a una síntesis que al menos haga que todos sepamos que piensa el otro y, con esa premisa, tratemos de construir puentes para un mejor futuro. 
+                            ¡Los invito a esta aventura!</p>
                     </div>
+                </div>
+                <div class="col-xxl-2 col-md-5 col-sm-12">
+                    <img src="./images/andy1.jpg" class=" imgAndy  rounded-start" alt="...">
                 </div>
             </div>
         </div>
@@ -71,7 +73,7 @@
                             <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
                             <div class="card-body">
                                 <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
-                                <p class="card-text">Desde nuestras distintas áreas profesionales -asuntos públicos,
+                                <p class="cardNotes">Desde nuestras distintas áreas profesionales -asuntos públicos,
                                     comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple
                                     Impacto:
                                     cómo aportamos en lo social, ambiental y económico.</p>
@@ -88,7 +90,7 @@
                                 <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la
                                     comunidad
                                     profesional</h3>
-                                <p class="card-text">Como parte de los objetivos institucionales de trabajar “en cada
+                                <p class="cardNotes">Como parte de los objetivos institucionales de trabajar “en cada
                                     etapa de
                                     la profesión”, la Comisión de Mandos Medios profundiza y cristaliza sus objetivos
                                     aún en
@@ -108,8 +110,10 @@
                         <div class="card" style="width: 18rem;">
                             <img src="./images/charla1.jfif" class="card-img-top" alt="imgCharla1">
                             <div class="card-body">
-                                <h3>Charla 1</h3>
-                                <p class="card-text">Texto de la Charla 1</p>
+                                <h3>Issues Management y Comunicación de Crisis
+                                </h3>
+                                <p class="cardNotes">Charla con los futuros colegas de  UAI Centro -en el marco de la asignatura "Issues Management y Comunicación de Crisis". Gracias a la prof. Marisa Ramos Meneghetti por la invitación. Siempre es un placer conversar sobre el presente y el futuro de la profesión.
+                                </p>
                                 <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
                                 <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
                                     class="btn btn-dark">Ir a la Charla</a>
@@ -120,8 +124,8 @@
                         <div class="card" style="width: 18rem;">
                             <img src="./images/charla2.jpg" class="card-img-top" alt="imgCharla2">
                             <div class="card-body">
-                                <h3>Charla 2</h3>
-                                <p class="card-text">Texto de la Charla 2</p>
+                                <h3>USAL - Liderazgo y conducción de equipos</h3>
+                                <p class="cardNotes">Charla en la Facultad de Ciencias de la Educación y de la Comunicación Social de la USAL , fui invitado por Ana Kenny con el objetivo de transmitirle a los chic@s mi breve experiencia en esta profesión y poder conversar con ellos acerca de sus inquietudes.</p>
                                 <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
                                 <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
                                     class="btn btn-dark">Ir a la Charla</a>
@@ -134,7 +138,7 @@
     </section>
     <footer id="Footer" class="container-fluid justify-content-center">
         <div class="row marginAuto">
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Asesoramiento Personal</a>
@@ -145,14 +149,14 @@
                             Profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Blog</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Noticias de Actualidad</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Charlas a Empresas</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Sobre Andy</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mi experiencia laboral</a></li>
@@ -160,17 +164,14 @@
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis objetivos profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li><a class="link-dark" href="#"><img class="imagenesRRSS" src="./images/twitter_logo.png"
-                                    alt=""></a></li>
-                        <li class="ms-3"><a class="link-dark" href="#"><img class="imagenesRRSS"
-                                    src="./images/instagram_logo.png" alt=""></a></li>
-                        <li class="ms-3"><a class="link-dark" href="#"><img class="imagenesRRSS"
-                                    src="./images/facebook_logo.png" alt=""></a></li>
+                        <li ><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li class="ms-3"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li class="ms-3"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
                     </ul>
                 </ul>
             </div>
@@ -183,5 +184,4 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
