agregando contenido y modificaciones

--- a/contacto.html
+++ b/contacto.html
@@ -47,24 +47,24 @@
         </nav>
     </header>
     <section class="container-fluid marginSection">
-        <h1 class="tituloSeccion">Conectemos</h1>
+        <h1 class="tituloSeccion colorSecundario">Conectemos</h1>
         <div id="containerContacto" class="col-xxl-4">
             <form id="fs-frm" name="simple-contact-form" acceptCharset="utf-8" action="https://formspree.io/f/xyylrjdo"
                 method="post">
                 <fieldset id="fs-frm-inputs">
-                    <h3 className="centrar">Dejame tus datos y me comunicaré con vos</h3>
+                    <h3 class="centrar colorPrimario">Dejame tus datos y me comunicaré con vos</h3>
                     <label htmlFor="full-name">Nombre y Apellido</label>
                     <input type="text" name="name" id="full-name" placeholder="Nombre y Apellido" required />
                     <label htmlFor="email-address">Email</label>
                     <input type="email" name="_replyto" id="email-address" placeholder="example@email.com" require />
-                    <label htmlFor="telephone">Teléfono (Opcional)</label>
+                    <label htmlFor="telephone">Teléfono <span class="text-muted">(Opcional)</span></label>
                     <input type="number" name="telephone" id="telephone" placeholder="11 1234-5678" />
                     <label htmlFor="message">Dejanos tu Mensaje / Consulta</label>
                     <textarea rows="5" name="message" id="message"
                         placeholder="Escriba lo que desee consultar o solicitar" required></textarea>
                     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission" />
                 </fieldset>
-                <input class="enviarForm" type="submit" value="Enviar" />
+                <input class="enviarForm btn" type="submit" value="Enviar" />
             </form>
         </div>
     </section>
@@ -101,7 +101,7 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li ><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
                         <li class="ms-3"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
                     </ul>
