--- a/sobreMi.html
+++ b/sobreMi.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -47,13 +48,14 @@
     <section class="container-fluid marginSection">
         <div class="row card cardMargin">
             <div class="row g-0">
+                <div class="row">
+                    <h1 id="tituloSobreMi" class="card-title">Hola, soy Andy Rojas</h1>
+                </div>
                 <div class="col-xxl-3 col-md-5 col-sm-12">
-                    <img src="./images/AndresRojas.jfif" class="img-fluid rounded imgSobreMi" width="350"
-                        alt="AndyRojas">
+                    <img src="./images/andy2.jpg" class="img-fluid rounded imgSobreMi" width="350" alt="AndyRojas">
                 </div>
                 <div class="col-xxl-5 col-md-7 col-sm-12">
                     <div class="card-body">
-                        <h3 class="card-title">Hola, soy Andy Rojas</h3>
                         <div class="card-text parrafosSobreMi">
                             <p>
                                 Antes que nada, quería agradecerte que te des una vuelta por acá a leer un poco sobre mí
@@ -89,7 +91,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid marginSection">
+    <section id="parrafosSobreMi" class="container-fluid marginSection">
         <div class="row">
             <div class="col-xxl-3 marginAutoLR">
                 <h4>Mis estudios</h4>
@@ -104,26 +106,26 @@
                 <h4>Mi experiencia laboral</h4>
                 <p>Comencé en el sector público nacional, pasando por la Jefatura de Gabinete de Ministros, Senado de la
                     Nación y nuevamente Jefatura.
+                <p>
                     En el 2015, ya recibido de licenciado, me volqué al sector privado. Siempre en el área de asuntos
                     públicos.
+                </p>
+                <p>
                     Mis inicios fueron en la consultora Ketchum Argentina, como ejecutivo de cuentas. Luego de un año,
                     di el paso al sector corporativo siendo analista en Farmacity.
+                </p>
+                <p>
                     Actualmente, me encuentro en la multinacional alimenticia francesa, Danone como Responsable de
                     asuntos públicos.
+                </p>
                 </p>
             </div>
             <div class="col-xxl-3 marginAutoLR">
                 <h4>Mis objetivos profesionales</h4>
-                <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor voluptas beatae voluptas.
-                    Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in architecto et et fugit quia dicta.
-
-                    Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo odio
-                    minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit voluptates eos.
-                    In voluptatem vero.
-
-                    Autem cumque quae aspernatur ab sapiente ratione perspiciatis suscipit ipsa. Sunt qui quos iusto sit
-                    inventore assumenda. Quis ad aut nam enim non consequatur itaque ex. Eos autem cumque incidunt
-                    officia ut quam voluptatem.</p>
+                <p>Poder colaborar, mediante el asesoramiento profesional en comunicación y relacionamiento, con
+                    diferentes organizaciones, empresas pymes, emprendedores, etc., que quieran maximizar su potencial.
+                    Poder contribuir a alcanzar sus objetivos de negocio, de reputación y, en el caso de que haga falta,
+                    a mitigar impactos negativos que podrían encontrase en el camino.</p>
             </div>
         </div>
     </section>
@@ -160,7 +162,7 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li ><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
                         <li class="ms-3"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
                     </ul>
@@ -175,4 +177,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
