--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -50,21 +51,33 @@
                 <div class="col-xxl-10 col-md-7 col-sm-12">
                     <div class="card-body">
                         <h5 class="card-title">Bienvenidos a Sweet Spot!</h5>
-                        <p class="card-text">¡Hola! Después de un tiempo planteándome la posibilidad de crear un blog, por fin me anime y acá estamos.
-                            El objetivo fundamental del blog, como su nombre lo indica #SweetSpot (punto justo), es ser la interfaz donde se concreten y conecten diversos intereses de la sociedad abordados por diferentes puntos de vista. Es decir, con una visión “lo más plural posible”, intentando llegar a un consenso, o por lo menos, a un debate de diferentes actores de la sociedad sobre diferentes temas.
-                            Debido al eficiente trabajo del #laprogramacionselectiva, cada vez más leemos, escuchamos posiciones (generalmente parecidas a la nuestra) y estamos actualizados de los temas de nuestro interés. Solo los de nuestro interés, obviando otras miradas y perdiéndonos de hechos o debates interesantes e importantes que pasan bajo nuestro radar. 
-                            Generalmente, no se busca comprender un acontecimiento.  Si no, reforzar nuestras creencias previamente concebidas. En este blog trataremos de salir de la zona de confort, interiorizarnos acerca de cuales son los puntos de vista y propuestas de los demás actores de la sociedad. Intentaremos llegar a una síntesis que al menos haga que todos sepamos que piensa el otro y, con esa premisa, tratemos de construir puentes para un mejor futuro. 
+                        <p class="card-text">¡Hola! Después de un tiempo planteándome la posibilidad de crear un blog,
+                            por fin me anime y acá estamos.
+                            El objetivo fundamental del blog, como su nombre lo indica #SweetSpot (punto justo), es ser
+                            la interfaz donde se concreten y conecten diversos intereses de la sociedad abordados por
+                            diferentes puntos de vista. Es decir, con una visión “lo más plural posible”, intentando
+                            llegar a un consenso, o por lo menos, a un debate de diferentes actores de la sociedad sobre
+                            diferentes temas.
+                            Debido al eficiente trabajo del #laprogramacionselectiva, cada vez más leemos, escuchamos
+                            posiciones (generalmente parecidas a la nuestra) y estamos actualizados de los temas de
+                            nuestro interés. Solo los de nuestro interés, obviando otras miradas y perdiéndonos de
+                            hechos o debates interesantes e importantes que pasan bajo nuestro radar.
+                            Generalmente, no se busca comprender un acontecimiento. Si no, reforzar nuestras creencias
+                            previamente concebidas. En este blog trataremos de salir de la zona de confort,
+                            interiorizarnos acerca de cuales son los puntos de vista y propuestas de los demás actores
+                            de la sociedad. Intentaremos llegar a una síntesis que al menos haga que todos sepamos que
+                            piensa el otro y, con esa premisa, tratemos de construir puentes para un mejor futuro.
                             ¡Los invito a esta aventura!</p>
                     </div>
                 </div>
                 <div class="col-xxl-2 col-md-5 col-sm-12">
-                    <img src="./images/andy1.jpg" class=" imgAndy  rounded-start" alt="...">
+                    <img src="./images/andy1.jpg" class="imgAndy rounded" alt="AndyRojas">
                 </div>
             </div>
         </div>
     </section>
     <section class="container-fluid marginSection">
-        <div class="row">
+        <div class="row filaUltimas">
             <div class="col-xxl-6 col-md-12 col-sm-12">
                 <div class="row">
                     <h1>Últimas Notas</h1>
@@ -112,7 +125,10 @@
                             <div class="card-body">
                                 <h3>Issues Management y Comunicación de Crisis
                                 </h3>
-                                <p class="cardNotes">Charla con los futuros colegas de  UAI Centro -en el marco de la asignatura "Issues Management y Comunicación de Crisis". Gracias a la prof. Marisa Ramos Meneghetti por la invitación. Siempre es un placer conversar sobre el presente y el futuro de la profesión.
+                                <p class="cardNotes">Charla con los futuros colegas de UAI Centro -en el marco de la
+                                    asignatura "Issues Management y Comunicación de Crisis". Gracias a la prof. Marisa
+                                    Ramos Meneghetti por la invitación. Siempre es un placer conversar sobre el presente
+                                    y el futuro de la profesión.
                                 </p>
                                 <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
                                 <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
@@ -125,7 +141,10 @@
                             <img src="./images/charla2.jpg" class="card-img-top" alt="imgCharla2">
                             <div class="card-body">
                                 <h3>USAL - Liderazgo y conducción de equipos</h3>
-                                <p class="cardNotes">Charla en la Facultad de Ciencias de la Educación y de la Comunicación Social de la USAL , fui invitado por Ana Kenny con el objetivo de transmitirle a los chic@s mi breve experiencia en esta profesión y poder conversar con ellos acerca de sus inquietudes.</p>
+                                <p class="cardNotes">Charla en la Facultad de Ciencias de la Educación y de la
+                                    Comunicación Social de la USAL , fui invitado por Ana Kenny con el objetivo de
+                                    transmitirle a los chic@s mi breve experiencia en esta profesión y poder conversar
+                                    con ellos acerca de sus inquietudes.</p>
                                 <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
                                 <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
                                     class="btn btn-dark">Ir a la Charla</a>
@@ -169,7 +188,7 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li ><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
                         <li class="ms-3"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
                     </ul>
@@ -184,4 +203,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
