--- a/servicios.html
+++ b/servicios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -46,58 +47,101 @@
     </header>
     <section class="container-fluid marginSection">
         <div class="row">
-            <h1 class="tituloSeccion">¿En qué puedo ayudarte?</h1>
-            <div class="col-xxl-5 col-md-6 col-xs-12 marginAutoLR">
+            <h1 class="colorSecundario tituloServicios">¿En qué puedo ayudarte?</h1>
+            <div class="col-xxl-6 col-md-6 col-xs-12 marginAutoLR">
                 <div class="card">
-                    <h3 class="card-title tituloServicios">Asesoramiento profesional</h3>
-                    <img src="/images/servicio1.jpg" class="img-fluid rounded imagenServicios" alt="...">
-                    <div class="card-body">
-                        <div class="btnServicios">
-                            <a href="#" class="btn btn-dark">Solicitá tu asesoramiento</a>
+                    <h3 class="colorPrimario tituloServicios">Asesoramiento profesional</h3>
+                    <div class="row">
+                        <div class="col-xxl-6">
+                            <img src="/images/servicio1.jpg" class="img-fluid rounded imagenServicios"
+                                alt="Asesoramiento">
+                            <div class="btnServicios">
+                                <a href="#" class="btn">Solicitá tu asesoramiento</a>
+                            </div>
                         </div>
-                        <p class="card-text">Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor
-                            voluptas beatae voluptas. Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in
-                            architecto et et fugit quia dicta.
+                        <div class="col-xxl-6">
+                            <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga
+                                dolor
+                                voluptas beatae voluptas. Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat
+                                in
+                                architecto et et fugit quia dicta.
 
-                            Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo
-                            odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit
-                            voluptates eos. In voluptatem vero.
+                                Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut
+                                explicabo
+                                odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in
+                                sit
+                                voluptates eos. In voluptatem vero.
 
-                            Autem cumque quae aspernatur ab sapiente ratione
+                                Autem cumque quae aspernatur ab sapiente ratione
 
-                            Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo
-                            odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit
-                            voluptates eos. In voluptatem vero.
-
-                            Autem cumque quae aspernatur ab sapiente ratione </p>
+                                Sapiente voluptas sunt.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-xxl-5 col-md-6 col-xs-12 marginAutoLR">
+            <div class="col-xxl-6 col-md-6 col-xs-12 marginAutoLR">
                 <div class="card">
-                    <h3 class="card-title tituloServicios">Capacitaciones para empresas y emprendimientos</h3>
-                    <img src="/images/servicio2.jpg" class="img-fluid rounded imagenServicios" alt="...">
-                    <div class="card-body">
-                        <div class="btnServicios">
-                            <a href="#" class="btn btn-dark">Solicitá tu asesoramiento</a>
+                    <h3 class="tituloServicios colorPrimario">Capacitaciones para empresas y emprendimientos</h3>
+                    <div class="row">
+                        <div class="col-xxl-6">
+                            <img src="/images/servicio2.jpg" class="img-fluid rounded imagenServicios"
+                                alt="Capacitaciones">
+                            <div class="btnServicios">
+                                <a href="#" class="btn">Solicitá tu asesoramiento</a>
+                            </div>
                         </div>
-                        <p class="card-text">Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor
-                            voluptas beatae voluptas. Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in
-                            architecto et et fugit quia dicta.
+                        <div class="col-xxl-6">
+                            <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga
+                                dolor
+                                voluptas beatae voluptas. Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat
+                                in
+                                architecto et et fugit quia dicta.
 
-                            Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo
-                            odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit
-                            voluptates eos. In voluptatem vero.
+                                Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut
+                                explicabo
+                                odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in
+                                sit
+                                voluptates eos. In voluptatem vero.
 
-                            Autem cumque quae aspernatur ab sapiente ratione
+                                Autem cumque quae aspernatur ab sapiente ratione
 
-                            Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo
-                            odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit
-                            voluptates eos. In voluptatem vero.
-
-                            Autem cumque quae aspernatur ab sapiente ratione </p>
+                                Sapiente voluptas sunt.</p>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="charlas" class="container-fluid marginSection">
+        <h2 class="colorPrimario">Charla en Universidades</h2>
+        <div class="row">
+            <div class="col-xxl-5 col-md-5 col-sm-12">
+                <h4>Issues Management y Comunicaciónde Crisis</h4>
+                <img src="/images/charla1.jfif" class="img-fluid" alt="charla1">
+                <p class="alignRightFecha text-muted">02/12/2020</p>
+                <p>
+                    Charla con los futuros colegas de UAI Centro -en el marco de la asignatura "Issues Management y
+                    Comunicación de Crisis". Gracias a la prof. Marisa Ramos Meneghetti por la invitación. Siempre es un
+                    placer conversar sobre el presente y el futuro de la profesión.
+                </p>
+            </div>
+            <div class="col-xxl-5 col-md-5 col-sm-12">
+                <h4>USAL - Liderazgo y conducción de equipos</h4>
+                <img src="/images/charla2.jpg" class="img-fluid" alt="charla2">
+                <p class="alignRightFecha text-muted">02/06/2021</p>
+                <p>Hoy tuve el placer de volver a mi querida Facultad de Ciencias de la Educación y de la Comunicación
+                    Social de la USAL , esta vez como joven profesional, fui invitado por Ana Kenny con el objetivo de
+                    transmitirle a los chic@s mi breve experiencia en esta profesión y poder conversar con ellos acerca
+                    de sus inquietudes.
+                    Gracias infinitas Ana Kenny por hacerlo posible y crear estos contextos de posibilidad. También, a
+                    mi amigo y prof. Patricio Puerta y a la prof Gabriela Gaona por sumarse con sus respectivos cursos a
+                    la conversación. obviamente, también, a los alumnos que participaron.
+                    Celebro este tipo de espacios, donde se comparte experiencia y todos nos nutrimos de todos. Espero
+                    que les haya servido a mis futuros colegas tanto como a mí.
+                </p>
+            </div>
+            <div class="btnServicios">
+                <a href="#" class="btn">Solicitá tu asesoramiento</a>
             </div>
         </div>
     </section>
@@ -134,7 +178,7 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li ><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
                         <li class="ms-3"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
                         <li class="ms-3"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
                     </ul>
@@ -149,4 +193,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
