--- a/servicios.html
+++ b/servicios.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html"><img src="./images/logospot.png" width="120x100" alt=""></a>
+                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -147,7 +147,7 @@
     </section>
     <footer id="Footer" class="container-fluid justify-content-center">
         <div class="row marginAuto">
-            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Asesoramiento Personal</a>
@@ -158,14 +158,14 @@
                             Profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Blog</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Noticias de Actualidad</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Charlas a Empresas</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Sobre Andy</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mi experiencia laboral</a></li>
@@ -173,14 +173,14 @@
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis objetivos profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft">
+            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
-                        <li class="ms-3"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
+                        <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a></li>
                     </ul>
                 </ul>
             </div>
