favicon + detalles responsive

--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./images/logoazul.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,18 +48,18 @@
     </header>
     <section class="container-fluid marginSection">
         <h1 class="tituloSeccion colorSecundario">Conectemos</h1>
-        <div id="containerContacto" class="col-xxl-4">
+        <div id="containerContacto" class="col-xxl-5 col-md-6">
             <form id="fs-frm" name="simple-contact-form" acceptCharset="utf-8" action="https://formspree.io/f/xyylrjdo"
                 method="post">
                 <fieldset id="fs-frm-inputs">
                     <h3 class="centrar colorPrimario">Dejame tus datos y me comunicaré con vos</h3>
                     <label htmlFor="full-name">Nombre y Apellido</label>
-                    <input type="text" name="name" id="full-name" placeholder="Nombre y Apellido" required />
+                    <input type="text" name="name" id="full-name" placeholder="Complete este campo" required />
                     <label htmlFor="email-address">Email</label>
                     <input type="email" name="_replyto" id="email-address" placeholder="example@email.com" require />
                     <label htmlFor="telephone">Teléfono <span class="text-muted">(Opcional)</span></label>
                     <input type="number" name="telephone" id="telephone" placeholder="11 1234-5678" />
-                    <label htmlFor="message">Dejanos tu Mensaje / Consulta</label>
+                    <label htmlFor="message">Mensaje</label>
                     <textarea rows="5" name="message" id="message"
                         placeholder="Escriba lo que desee consultar o solicitar" required></textarea>
                     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission" />
