--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="images/logoazul.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,15 +52,15 @@
             <div class="row ">
                 <div class="col-xxl-10 col-md-7 col-sm-12">
                     <div class="card-body">
-                        <h5 class="card-title">Bienvenidos a Sweet Spot!</h5>
-                        <p class="card-text">¡Hola! Después de un tiempo planteándome la posibilidad de crear un blog,
+                        <h5 class="card-title animated fadeInLeft" style="animation-delay: 1s">Bienvenidos a Sweet Spot!</h5>
+                        <p class="card-text" style="animation-delay: 2s">¡Hola! Después de un tiempo planteándome la posibilidad de crear un blog,
                             por fin me anime y acá estamos.
                             El objetivo fundamental del blog, como su nombre lo indica #SweetSpot (punto justo), es ser
                             la interfaz donde se concreten y conecten diversos intereses de la sociedad abordados por
                             diferentes puntos de vista. Es decir, con una visión “lo más plural posible”, intentando
                             llegar a un consenso, o por lo menos, a un debate de diferentes actores de la sociedad sobre
-                            diferentes temas.
-                            Debido al eficiente trabajo del #laprogramacionselectiva, cada vez más leemos, escuchamos
+                            diferentes temas.</p>
+                            <p class="card-text" id="verMas">Debido al eficiente trabajo del #laprogramacionselectiva, cada vez más leemos, escuchamos
                             posiciones (generalmente parecidas a la nuestra) y estamos actualizados de los temas de
                             nuestro interés. Solo los de nuestro interés, obviando otras miradas y perdiéndonos de
                             hechos o debates interesantes e importantes que pasan bajo nuestro radar.
@@ -68,10 +70,11 @@
                             de la sociedad. Intentaremos llegar a una síntesis que al menos haga que todos sepamos que
                             piensa el otro y, con esa premisa, tratemos de construir puentes para un mejor futuro.
                             ¡Los invito a esta aventura!</p>
+                            <a href="#" class="btn btn-dark justify-content-center">Ver más</a>
                     </div>
                 </div>
                 <div class="col-xxl-2 col-md-5 col-sm-12">
-                    <img src="./images/andy1.jpg" class="imgAndy rounded" alt="AndyRojas">
+                    <img src="./images/andy1.jpg" class="imgAndy rounded animated fadeInRight" style="animation-delay: 3s" alt="AndyRojas">
                 </div>
             </div>
         </div>
@@ -85,14 +88,14 @@
                         <div class="card" style="width: 18rem;">
                             <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
                             <div class="card-body">
-                                <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
+                                <h3 >Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
                                 <p class="cardNotes">Desde nuestras distintas áreas profesionales -asuntos públicos,
                                     comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple
                                     Impacto:
                                     cómo aportamos en lo social, ambiental y económico.</p>
                                 <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
                                 <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
-                                    class="btn btn-dark">Ir a la Nota</a>
+                                    class="btn btn-dark ">Ir a la Nota</a>
                             </div>
                         </div>
                     </div>
@@ -202,6 +205,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+        <script src="js/main.js"></script>
 </body>
 
 </html>
