--- a/servicios.html
+++ b/servicios.html
@@ -4,8 +4,10 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="styleshe>et">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/logoazul.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +58,7 @@
                             <img src="/images/servicio1.jpg" class="img-fluid rounded imagenServicios"
                                 alt="Asesoramiento">
                             <div class="btnServicios">
-                                <a href="#" class="btn">Solicitá tu asesoramiento</a>
+                                <a href="/contacto.html" class="btn">Solicitá tu asesoramiento</a>
                             </div>
                         </div>
                         <div class="col-xxl-6">
@@ -87,7 +89,7 @@
                             <img src="/images/servicio2.jpg" class="img-fluid rounded imagenServicios"
                                 alt="Capacitaciones">
                             <div class="btnServicios">
-                                <a href="#" class="btn">Solicitá tu asesoramiento</a>
+                                <a href="/contacto.html" class="btn">Solicitá tu asesoramiento</a>
                             </div>
                         </div>
                         <div class="col-xxl-6">
@@ -124,6 +126,9 @@
                     Comunicación de Crisis". Gracias a la prof. Marisa Ramos Meneghetti por la invitación. Siempre es un
                     placer conversar sobre el presente y el futuro de la profesión.
                 </p>
+                <div class="btnServicios">
+                    <a href="/contacto.html" class="btn">Solicitá tu asesoramiento</a>
+                </div>
             </div>
             <div class="col-xxl-5 col-md-5 col-sm-12">
                 <h4>USAL - Liderazgo y conducción de equipos</h4>
@@ -139,9 +144,6 @@
                     Celebro este tipo de espacios, donde se comparte experiencia y todos nos nutrimos de todos. Espero
                     que les haya servido a mis futuros colegas tanto como a mí.
                 </p>
-            </div>
-            <div class="btnServicios">
-                <a href="#" class="btn">Solicitá tu asesoramiento</a>
             </div>
         </div>
     </section>
