--- a/sobreMi.html
+++ b/sobreMi.html
@@ -6,6 +6,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/logoazul.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,6 +88,7 @@
                 </div>
                 <div class="col-xxl-4 col-md-12 col-sm-12 imagenMenor">
                     <img src="./images/Foto Chica.jpg" class="img-fluid rounded imgSobreMi" alt="AndyRojas2">
+                    <img src="./images/sobremi2.JPG" class="img-fluid rounded imgSobreMi" alt="AndyRojas2">
                 </div>
             </div>
         </div>
